added features and moved/renamed files

--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Word Guess Game</title>
-    <link href="style.css" rel="stylesheet">
-    <script src="script.js"></script>
+    <link href="assets/css/style.css" rel="stylesheet">
+    <script src="assets/javascript/game.js"></script>
 </head>
 <body>
     <div class="content">
         <div>Wins: <span id="wins">0</span></div>
+        <div>Losses: <span id="losses">0</span></div>
+        <div>Guesses remaining: <span id="guesses">6</span></div>
+        <div>Letters guessed: <span id="letters"></span></div>
         <div id="word"></div>
+        <div><img id="post" src="assets/images/post-0.png"></div>
+        <div id="message"></div>
     </div>
 </body>
 </html>
