--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Word Guess Game</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link href="assets/css/style.css" rel="stylesheet">
     <script src="assets/javascript/game.js"></script>
 </head>
